--- a/data/sections.yml
+++ b/data/sections.yml
@@ -10,11 +10,11 @@ project:
     title: "Software, Web Projects"
     menu: "Projects"
     description: "Various websites and software that I've written and deployed. Nearly all of this is open-source, and most of it is available on Github."
+photo:
+    title: "Photography"
+    menu: "Photos"
+    description: "Most of my photographs are posted elsewhere, but I'll use this space to provide a bit more background and information on my favorites. I may also provide criticism of photography that I find on the Internet."
 k6gec: 
     title: "Ham Radio"
     menu: "K6GEC"
     description: "These are a number of posts related to amateur (\"ham\") radio. Since they are probably not of general interest, I keep them in a separate section here. (K6GEC is my FCC-issued callsign.)"
-photo:
-    title: "Photography"
-    menu: "Photos"
-    description: "I'll post most of my photographs elsewhere, but I've decided to use this space to provide a bit more background and information than is available on those other sites."
