--- a/data/sections.yml
+++ b/data/sections.yml
@@ -1,7 +1,7 @@
 essay: 
     title: "Essays"
     menu: "Essays"
-    description: "A collection of prose and poetry, both serious and profane, on numerous subjects ranging from music to software to work and biography. Most of what I write is for my own memory, but it might be interesting to someone else."
+    description: "A collection of prose and poetry, both serious and profane, on numerous subjects ranging from music to software to cooking to work and biography. Most of what I write is for my own memory, but it might be interesting to someone else."
 podcast: 
     title: "On Garner Road"
     menu: "Podcast"
