--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,37 @@ photo = "/photo/:year/:month/:filename.html"
 [params]
 Description = "Fresh content and links served occasionally"
 Author = "Glen Campbell"
+
+[[menu.main]]
+identifier="author"
+weight=-1
+
+[[menu.main]]
+name="Ham Radio"
+identifier="k6gec"
+url="/k6gec.html"
+weight=9
+
+[[menu.main]]
+name="Podcast"
+identifier="podcast"
+url="/podcast.html"
+weight=3
+
+[[menu.main]]
+name="Essays"
+identifier="essay"
+url="/essay.html"
+weight=1
+
+[[menu.main]]
+name="Projects"
+identifier="project"
+url="/project.html"
+weight=8
+
+[[menu.main]]
+identifier="recipe"
+name="Recipes"
+weight=2
+url="/recipe.html"
