--- a/data/sections.yml
+++ b/data/sections.yml
@@ -1,5 +1,5 @@
 essay: 
-    title: "Essays"
+    title: "Essays & Poetry"
     menu: "Essays"
     description: "A collection of prose and poetry, both serious and profane, on numerous subjects ranging from music to software to cooking to work and biography. Most of what I write is for my own memory, but it might be interesting to someone else."
 recipe:
