--- a/data/sections.yml
+++ b/data/sections.yml
@@ -1,10 +1,12 @@
 essay: 
     title: "Essays & Poetry"
     menu: "Essays"
+    weight: 1
     description: "A collection of prose and poetry, both serious and profane, on numerous subjects ranging from music to software to cooking to work and biography. Most of what I write is for my own memory, but it might be interesting to someone else."
 recipe:
     title: "Recipes"
     menu: "Recipes"
+    weight: 2
     description: "I enjoy cooking. These are dishes that I have adapted in some way or another."
 podcast: 
     title: "On Garner Road"
